# Fudan_Digital_EDA

./: .gitignore  CMakeLists.txt  FSMachine.cpp  FSMachine.h  Graph.h  HLS.cpp  HLS.h  Hungarian_algorithm.h  Link.h  Makefile  README.md  computeresource.h  control_logic.h  controlflowgraph.cpp  controlflowgraph.h  cycleTable.h  dataflowgraph.cpp  dataflowgraph.h  dotprod.v  hls  leftAlgorithm.h  main.cpp  parser.cpp  parser.h  read.md  schedule.cpp  schedule.h
src/: FSMachine.h  HLS.cpp  HLS.h  Hungarian_algorithm.h  computeresource.h  control_logic.h  controlflowgraph.cpp  controlflowgraph.h  cycleTable.h  dataflowgraph.cpp  dataflowgraph.h  leftAlgorithm.h  main.cpp  parser.cpp  schedule.cpp
src/src/: FSMachine.cpp  HLS.cpp  computeresource.h  control_logic.h  cycleTable.h  dataflowgraph.h  leftAlgorithm.h  main.cpp  parser.h  schedule.h
test/: HLS.cpp  HLS.h  main.cpp  makefile.win  parser.cpp  parser.h  test.dev  test_private.h  test_private.res
testfile/: SRAM.v  Sum.ll  Sum.v  dotprod.ll  dotprod.v  gcd.ll  gcd.v  sum.ll  tb_Sum.v  tb_dotprod.v  tb_gcd.v
